--- a/src/perfui/templates/perfui/base.html
+++ b/src/perfui/templates/perfui/base.html
@@ -17,6 +17,9 @@
     <script type="text/javascript" src="/static/armchart/amcharts.js"></script>
 	<script type="text/javascript" src="/static/armchart/serial.js"></script>
 	
+	<link href="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+	<script src="http://cdnjs.cloudflare.com/ajax/libs/x-editable/1.5.0/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+	
 	<script type="text/javascript" src="/static/vex/vex.js"></script>
 	
 	{% block header %}  {% endblock%}
