--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -3,7 +3,7 @@
 {% block header %}
 <script>
 	$(function() {
-	    //$.fn.editable.defaults.mode = 'inline';
+	    $.fn.editable.defaults.mode = 'inline';
 	    $('#vex_operations a').editable({
 	    	url:'/op/update',
 	        success: function(response, newValue) {
@@ -19,10 +19,11 @@
 {% endblock%}
 
 {% block main %}
-
-<div class="col-sm-12 col-md-12">
+<div class="divider"><h5 class="page-header"></h5></div>
+<div class="row col-sm-12 col-md-12">
+	<p><strong class="text-success">VEX Performance Test Operation</strong></p>
 	 <div class="caption">
-		<table id="vex_operations" data-toggle="table" class="table table-bordered table-condensed">
+		<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 			<colgroup>
 				<col style="width:20%">
 				<col style="width:20%">
@@ -39,7 +40,7 @@
 			</thead>
 			<tbody>
 			    {% for vex_operation in vex_operation_list %}
-			    <tr>
+			    <tr class='success'>
 		            <td>{{ vex_operation.name }}</td>
 		            <td>{{ vex_operation.perf_config.test_type }}</td>
 		            <td>{{ vex_operation.perf_config.project_name }}</td>
@@ -49,5 +50,7 @@
 			 </tbody>
 		</table>
 	</div>
+	<div class="divider"><h5 class="page-header"></h5></div>
 </div>
+
 {% endblock%}
