--- a/src/perfui/templates/perfui/perf_result.html
+++ b/src/perfui/templates/perfui/perf_result.html
@@ -7,12 +7,13 @@
 		var bitrate_am_data = {{ bitrate_am_data |safe }};
 		
 		var category_field = "{{ serial_chart_category_field }}";
-		var category_axis_title = "{{ serial_chart_category_axis_title }}";
+		var index_category_axis_title = "{{ index_serial_chart_category_axis_title }}";
+		var bitrate_category_axis_title = "{{ bitrate_serial_chart_category_axis_title }}";
 		var value_axis_titile = "{{ serial_chart_value_axis_titile }}";
 		var graph_color_field = "{{ serial_chart_graph_color_field }}";
 		var graph_value_field = "{{ serial_chart_graph_value_field }}";
-		drawAmCharts("indexChart", index_am_data,  category_field, category_axis_title, value_axis_titile, graph_color_field, graph_value_field);
-		drawAmCharts("bitrateChart", bitrate_am_data, category_field, category_axis_title, value_axis_titile, graph_color_field, graph_value_field);
+		drawAmCharts("indexChart", index_am_data,  category_field, index_category_axis_title, value_axis_titile, graph_color_field, graph_value_field);
+		drawAmCharts("bitrateChart", bitrate_am_data, category_field, bitrate_category_axis_title, value_axis_titile, graph_color_field, graph_value_field);
 		
     });
     
