--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -1,14 +1,21 @@
 {% extends "./perfui/base.html" %}
 
 {% block header %}
+<style>
+    td {
+	    text-align: center; 
+	    vertical-align: top;
+	}
+</style>
+
 <script>
 	$(function() {
 	    $.fn.editable.defaults.mode = 'inline';
 	    $('#vex_operations a').editable({
-	    	url:'/op/update',
+	    	url:'/op/update/perf',
 	        success: function(response, newValue) {
 		        if(response.status == 'error') {
-		        	alert("Failed to save.");
+		        	alert("Failed to save the change.");
 		        }else{
 		        	//alert("Saved");
 		        }
@@ -25,26 +32,44 @@
 	 <div class="caption">
 		<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 			<colgroup>
-				<col style="width:20%">
-				<col style="width:20%">
-				<col style="width:30%">
-				<col style="width:30%">
+				<col style="width:2%">
+				<col style="width:2%">
+				<col style="width:5%">
+				<col style="width:5%">
+				<col style="width:5%">
+				<col style="width:5%">
+				<col style="width:4%">
+				<col style="width:10%">
 			</colgroup>
 			<thead>
 			    <tr>
-			      <th>Name</th>
-			      <th>Test Type</th>
-			      <th>Project Name</th>
-			      <th>Project Configuration</th>
+			      <th class='text-center'>Name</th>
+			      <th class='text-center'>Test Type</th>
+			      <th class='text-center'>Project Name</th>
+			      <th class='text-center'>Content Size</th>
+			      <th class='text-center'>Bitrate Number</th>
+			      <th class='text-center'>Concurrent Session</th>
+			      <th class='text-center'>WarmUp</th>
+			      <th class='text-center'>Operation</th>
 			     </tr>
 			</thead>
 			<tbody>
 			    {% for vex_operation in vex_operation_list %}
-			    <tr class='success'>
-		            <td>{{ vex_operation.name }}</td>
+			    <tr class='success text-center'>
+		            <td valign="middle">{{ vex_operation.name }}</td>
 		            <td>{{ vex_operation.perf_config.test_type }}</td>
 		            <td>{{ vex_operation.perf_config.project_name }}</td>
-		            <td><a href="#" id="op_id" name="op_name" data-pk="{{ vex_operation.id }}">{{ vex_operation.id }}</a></td>
+		            <td><a href="#" id="content_size" name="content_size" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.content_size }}</a></td>
+		            <td><a href="#" id="bitrate_number" name="bitrate_number" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.bitrate_number }}</a></td>
+		            <td><a href="#" id="concurrent_number" name="concurrent_number" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.concurrent_session }}</a></td>
+		            <td><a href="#" id="warm_up_minute" name="warm_up_minute" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.warm_up_minute }}</a> Minute</td>
+		            <td>
+		            	<div class="btn-group">
+							<button type="button" class="btn btn-success">Start</button>
+							<button type="button" class="btn btn-default">Stop</button>
+							<button type="button" class="btn btn-default">Status</button>
+						</div>
+		            </td>
 		        </tr>
 		        {% endfor %}
 			 </tbody>
