--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -4,7 +4,7 @@
 <style>
     .table > tbody > tr > td,th {
 	     vertical-align: middle;
-	     height: 45px;
+	     height: 40px;
 	}
 </style>
 
@@ -26,7 +26,7 @@
 {% endblock%}
 
 {% block main %}
-<div class="divider"><h5 class="page-header"></h5></div>
+<div class="divider"><h6 class="page-header"></h6></div>
 <div class="row col-sm-12 col-md-12">
 	<p><strong class="text-success">VEX Performance Test Operation</strong></p>
 	 <div class="caption">
@@ -46,7 +46,7 @@
 			      <th class='text-center'>Test Type</th>
 			      <th class='text-center'>Content Size</th>
 			      <th class='text-center'>Bitrate Number</th>
-			      <th class='text-center'>Concurrent Session</th>
+			      <th class='text-center'>Session Number</th>
 			      <th class='text-center'>WarmUp</th>
 			      <th class='text-center'>Operation</th>
 			     </tr>
