--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -2,10 +2,29 @@
 
 {% block header %}
 <style>
-    .table > tbody > tr > td,th {
+    .table > tbody > tr > td,th,thead {
 	     vertical-align: middle;
-	     //height: 35px;
+	     height: 50px;
+	     text-overflow: ellipsis; /* for IE */  
+	    -moz-text-overflow: ellipsis; /* for Firefox,mozilla */  
+	    overflow: hidden;   
+	    white-space: nowrap;   
 	}
+	
+	#operations {   
+	   table-layout: fixed;   
+	   width: 100% border:0px;   
+	   margin: 0px;   
+	} 
+	
+	.table > thead > tr > th{
+		vertical-align: middle;
+	}
+	
+	.mytd{
+		text-align: left 
+	}
+	
 </style>
 
 <script>
@@ -22,6 +41,23 @@
 		    }
 	     });
 	});
+	
+	function start(op_id){
+		alert("start " + op_id);
+	}
+	
+	function stop(op_id){
+		alert("stop " + op_id);
+	}
+	
+	function status(op_id){
+		alert("get status for" + op_id);
+	}
+	
+	function result_collect(op_id){
+		alert("result collect for " + op_id);
+	}
+	
 </script>
 {% endblock%}
 
@@ -32,22 +68,22 @@
 	 <div class="caption">
 		<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 			<colgroup>
-				<col style="width:3%">
-				<col style="width:3%">
-				<col style="width:4%">
-				<col style="width:5%">
-				<col style="width:5%">
-				<col style="width:4%">
 				<col style="width:10%">
+				<col style="width:10%">
+				<col style="width:10%">
+				<col style="width:10%">
+				<col style="width:12%">
+				<col style="width:12%">
+				<col style="width:30%">
 			</colgroup>
 			<thead>
 			    <tr>
 			      <th class='text-center'>Name</th>
 			      <th class='text-center'>Test Type</th>
-			      <th class='text-center'>Content Size</th>
-			      <th class='text-center'>Bitrate Number</th>
-			      <th class='text-center'>Session Number</th>
-			      <th class='text-center'>WarmUp</th>
+			      <th class='text-center'>Content No.</th>
+			      <th class='text-center'>Bitrate No.</th>
+			      <th class='text-center'>Session No.</th>
+			      <th class='text-center'>Warm Up</th>
 			      <th class='text-center'>Operation</th>
 			     </tr>
 			</thead>
@@ -58,17 +94,26 @@
 		            <td>{{ vex_operation.perf_config.test_type }}</td>
 		            <td><a href="#" id="content_size" name="content_size" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.content_size }}</a></td>
 		            <td><a href="#" id="bitrate_number" name="bitrate_number" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.bitrate_number }}</a></td>
-		            <td><a href="#" id="session_number" name="session_number" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.session_number }}</a></td>
+		            <td><a href="#" id="session_number" name="session_number" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.session_number }} </a>
+		            	{% ifequal vex_operation.perf_config.test_type 'VOD_T6'%}
+		            		/Second
+		            	{% else %}
+		            		Session
+		            	{% endifequal %}
+		            </td>
 		            <td><a href="#" id="warm_up_minute" name="warm_up_minute" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.warm_up_minute }}</a> Minute</td>
-		            <td class='text-left'>
-		            	{% if vex_operation.start_command != '' %} 
-							<button type="button" class="btn btn-success">Start</button>
+		            <td class='mytd text-left'>
+		            	{% if vex_operation.start_command%}
+							<button type="button" class="btn btn-success" onclick="start('{{vex_operation.id}}')">Start</button>
 						{% endif %}
-						{% if vex_operation.stop_command != '' %}
-							<button type="button" class="btn btn-primary">Stop</button>
+						{% if vex_operation.stop_command %}
+							<button type="button" class="btn btn-primary" onclick="stop('{{vex_operation.id}}')">Stop</button>
 						{% endif%}
-						{% if vex_operation.status_command != '' %}
-							<button type="button" class="btn btn-warning">Status</button>
+						{% if vex_operation.status_command %}
+							<button type="button" class="btn btn-warning" onclick="status('{{vex_operation.id}}')">Status</button>
+						{% endif%}
+						{% if vex_operation.result_collect_command %}
+							<button type="button" class="btn btn-warning" onclick="result_collect('{{vex_operation.id}}')">Result</button>
 						{% endif%}
 		            </td>
 		        </tr>
@@ -88,10 +133,10 @@
     {% if sub_operation_list %}
 	<div class="col-sm-4 col-md-4">
 		 <div class="caption">
-			<table id="vex_operations" data-toggle="table" class="table table-striped table-bordered table-hover">
+			<table id="operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 				<colgroup>
-					<col style="width:40%">
-					<col style="width:60%">
+					<col style="width:45%">
+					<col style="width:55%">
 				</colgroup>
 				<thead>
 				    <tr>
@@ -104,14 +149,14 @@
 				    <tr class='success text-center'>
 			            <td class="">{{ vex_operation.name }}</td>
 			            <td class='text-left'>
-			            	{% if vex_operation.start_command != '' %} 
-								<button type="button" class="btn btn-success">Start</button>
+			            	{% if vex_operation.start_command %} 
+								<button type="button" class="btn btn-success" onclick="start('{{vex_operation.id}}')">Run</button>
 							{% endif %}
-							{% if vex_operation.stop_command != '' %}
-								<button type="button" class="btn btn-primary">Stop</button>
+							{% if vex_operation.stop_command %}
+								<button type="button" class="btn btn-primary" onclick="stop('{{vex_operation.id}}')">Stop</button>
 							{% endif%}
-							{% if vex_operation.status_command != '' %}
-								<button type="button" class="btn btn-warning">Status</button>
+							{% if vex_operation.status_command %}
+								<button type="button" class="btn btn-warning" onclick="status('{{vex_operation.id}}')">Status</button>
 							{% endif%}
 			            </td>
 			        </tr>
