While click button, disable it until received server response

--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -42,7 +42,11 @@
 	     });
 	});
 	
-	function operation(op_tag, op_id){
+	function operation(op_tag, op_id, btn_id){
+		var btn = $("#" + btn_id);
+		btn.button('loading');
+		//setTimeout(function () { btn.button('reset'); },2000);
+		
 		$.getJSON("/op/execute?op_tag=" + op_tag + "&op_id=" + op_id,
 		    function(data)
 	        {
@@ -51,6 +55,7 @@
 				}else{
 					alert(data["message"]);
 				}
+				btn.button('reset');
 	        }
 		);
 	}
@@ -107,16 +112,16 @@
 		            <td><a href="#" id="warm_up_minute" name="warm_up_minute" data-pk="{{ vex_operation.id }}">{{ vex_operation.perf_config.warm_up_minute }}</a> Minute</td>
 		            <td class='mytd text-left'>
 		            	{% if vex_operation.start_command%}
-							<button type="button" class="btn btn-success" onclick="operation('start','{{vex_operation.id}}')">Start</button>
+		            		<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}')">Start</button>
 						{% endif %}
 						{% if vex_operation.stop_command %}
-							<button type="button" class="btn btn-primary" onclick="operation('stop','{{vex_operation.id}}')">Stop</button>
+						    <button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}')">Stop</button>
 						{% endif%}
 						{% if vex_operation.status_command %}
-							<button type="button" class="btn btn-warning" onclick="operation('status','{{vex_operation.id}}')">Status</button>
+							<button type="button" id="btn_status_{{vex_operation.id}}" class="btn btn-warning" data-loading-text="Getting status..." onclick="operation('status','{{vex_operation.id}}','btn_status_{{vex_operation.id}}')">Status</button>
 						{% endif%}
 						{% if vex_operation.result_collect_command %}
-							<button type="button" class="btn btn-warning" onclick="operation('result','{{vex_operation.id}}')">Result</button>
+							<button type="button" id="btn_result_{{vex_operation.id}}" class="btn btn-info" data-loading-text="Collecting..." onclick="operation('result','{{vex_operation.id}}','btn_result_{{vex_operation.id}}')">Result</button>
 						{% endif%}
 		            </td>
 		        </tr>
@@ -137,8 +142,8 @@
 		 <div class="caption">
 			<table id="operations" data-toggle="table" class="table table-striped table-bordered table-hover">
 				<colgroup>
-					<col style="width:45%">
-					<col style="width:55%">
+					<col style="width:40%">
+					<col style="width:60%">
 				</colgroup>
 				<thead>
 				    <tr>
@@ -157,14 +162,14 @@
 					{% endif %}
 			            <td>{{ vex_operation.name }}</td>
 			            <td class='text-left'>
-			            	{% if vex_operation.start_command %} 
-								<button type="button" class="btn btn-success" onclick="operation('start','{{vex_operation.id}}')">Run</button>
+			            	{% if vex_operation.start_command %}
+								<button type="button" id="btn_start_{{vex_operation.id}}" class="btn btn-success" data-loading-text="Starting..." autocomplete="off" onclick="operation('start','{{vex_operation.id}}','btn_start_{{vex_operation.id}}')">Start</button>
 							{% endif %}
 							{% if vex_operation.stop_command %}
-								<button type="button" class="btn btn-primary" onclick="operation('stop','{{vex_operation.id}}')">Stop</button>
+								<button type="button" id="btn_stop_{{vex_operation.id}}" class="btn btn-primary" data-loading-text="Stoping..." autocomplete="off" onclick="operation('stop','{{vex_operation.id}}','btn_stop_{{vex_operation.id}}')">Stop</button>
 							{% endif%}
 							{% if vex_operation.status_command %}
-								<button type="button" class="btn btn-warning" onclick="operation('status','{{vex_operation.id}}')">Status</button>
+								<button type="button" id="btn_status_{{vex_operation.id}}" class="btn btn-warning" data-loading-text="Getting status..." onclick="operation('status','{{vex_operation.id}}','btn_status_{{vex_operation.id}}')">Status</button>
 							{% endif%}
 			            </td>
 			        </tr>
