Using bootbox to do alert

--- a/src/perfui/templates/perfui/base.html
+++ b/src/perfui/templates/perfui/base.html
@@ -14,6 +14,8 @@
     <script src="/static/jquery/jquery.form.js"></script>
     <script src="/static/jquery/jquery.Jcrop.min.js"></script>
     <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+    <script src="/static/bootstrap/js/bootbox.min.js"></script>
+    
     <script type="text/javascript" src="/static/armchart/amcharts.js"></script>
 	<script type="text/javascript" src="/static/armchart/serial.js"></script>
 	
