text left for opertion

--- a/src/perfui/templates/perfui/operation.html
+++ b/src/perfui/templates/perfui/operation.html
@@ -177,7 +177,7 @@
 					{% else %}
 					    <tr class="warning text-center">
 					{% endif %}
-			            <td>{{ vex_operation.name }}</td>
+			            <td class='text-left'>{{ vex_operation.name }}</td>
 			            <td class='text-left'>
 			            	{% if vex_operation.start_command %}
 			            		{% if vex_operation.stop_command %}
